--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="kn">
+<html lang="ko">
 
 <head>
   <meta charset="utf-8" />
-  <title>React App</title>
+  <link redl="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <title>JAZZ LIST</title>
 </head>
 
 <body>
